syntax = "proto3";

package workload.v1;

import "google/protobuf/timestamp.proto";

option go_package = "workload/v1;workloadv1";

service WorkloadService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message ListRequest {}

message ListResponse {
  repeated Workload workloads = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Workload workload = 1;
}

message CreateRequest {
  string version_id = 1;
  string name = 2;
  string description = 3;
  repeated Artifact artifacts = 4;
}

message CreateResponse {
  Workload workload = 1;
}

message UpdateRequest {
  Workload workload = 1;
}

message UpdateResponse {
  Workload workload = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {}

message Workload {
  string id = 1;
  string name = 2;
  string description = 3;
  string version = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Artifact {
  string name = 1;
  ArtifactType type = 2;
  string tag = 3;
}

enum ArtifactType {
  // UNKNOWN is the default value and should not be used.
  ARTIFACT_TYPE_UNSPECIFIED = 0;

  // CONTAINER_IMAGE represents a container image artifact.
  ARTIFACT_TYPE_CONTAINER_IMAGE = 1;

  // ASSET represents a generic asset artifact.
  ARTIFACT_TYPE_ASSET = 2;
}
